--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8033
+
+spring.datasource.url=jdbc:mysql://10.161.84.95:3306/
+spring.datasource.username=root
+spring.datasource.password=LavaMg
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
